# shakeup-radar

./: README.md  pyproject.toml
shakeup_radar/: artifact.json  cli.py  metrics_map.py  pipeline.py
tests/: make_fixture.py  test_golden.py
tests/fixtures/: Competitions.csv
